// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree: basic & disabled children & default check children 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="tree"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            Tree
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-TreeControl amis-Form-control"
                    >
                      <div
                        class="amis-Tree"
                      >
                        <ul
                          class="amis-Tree-list"
                        >
                          <li
                            class="amis-Tree-item"
                            style="--Tree-depth: 0;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <div
                                class="amis-Tree-itemArrow"
                              >
                                <icon-mock
                                  classname="icon icon-down-arrow-bold"
                                  icon="down-arrow-bold"
                                />
                              </div>
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-folderIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-folder"
                                    icon="folder"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="Folder A"
                                >
                                  Folder A
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf is-child"
                            style="--Tree-depth: 1;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file A"
                                >
                                  file A
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item is-child"
                            style="--Tree-depth: 1;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <div
                                class="amis-Tree-itemArrow"
                              >
                                <icon-mock
                                  classname="icon icon-down-arrow-bold"
                                  icon="down-arrow-bold"
                                />
                              </div>
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-folderIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-folder"
                                    icon="folder"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="Folder B"
                                >
                                  Folder B
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf is-child"
                            style="--Tree-depth: 2;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file b1"
                                >
                                  file b1
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf is-child"
                            style="--Tree-depth: 2;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file b2"
                                >
                                  file b2
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf"
                            style="--Tree-depth: 0;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file C"
                                >
                                  file C
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf"
                            style="--Tree-depth: 0;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file D"
                                >
                                  file D
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree: showOutline 1`] = `
<div>
  <div
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page"
    >
      <div
        class="amis-Page-content"
      >
        <div
          class="amis-Page-main"
        >
          <div
            class="amis-Page-body"
            role="page-body"
          >
            <div
              class="amis-Panel amis-Panel--default amis-Panel--form"
              data-role="container"
            >
              <div
                class="amis-Panel-heading"
              >
                <h3
                  class="amis-Panel-title"
                >
                  <span
                    class="amis-TplField fr-view"
                  >
                    <span>
                      表单
                    </span>
                  </span>
                </h3>
              </div>
              <div
                class="amis-Panel-body"
              >
                <form
                  class="amis-Form amis-Form--normal"
                  novalidate=""
                >
                  <input
                    style="display: none;"
                    type="submit"
                  />
                  <div
                    class="amis-Form-item amis-Form-item--normal"
                    data-amis-name="tree"
                    data-role="form-item"
                  >
                    <label
                      class="amis-Form-label"
                    >
                      <span>
                        <span
                          class="amis-TplField fr-view"
                        >
                          <span>
                            Tree
                          </span>
                        </span>
                      </span>
                    </label>
                    <div
                      class="cxd-TreeControl amis-Form-control"
                    >
                      <div
                        class="amis-Tree amis-Tree--outline"
                      >
                        <ul
                          class="amis-Tree-list"
                        >
                          <li
                            class="amis-Tree-item"
                            style="--Tree-depth: 0;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <div
                                class="amis-Tree-itemArrow"
                              >
                                <icon-mock
                                  classname="icon icon-down-arrow-bold"
                                  icon="down-arrow-bold"
                                />
                              </div>
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-folderIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-folder"
                                    icon="folder"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="Folder A"
                                >
                                  Folder A
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf is-child"
                            style="--Tree-depth: 1;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file A"
                                >
                                  file A
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item is-child"
                            style="--Tree-depth: 1;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <div
                                class="amis-Tree-itemArrow"
                              >
                                <icon-mock
                                  classname="icon icon-down-arrow-bold"
                                  icon="down-arrow-bold"
                                />
                              </div>
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-folderIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-folder"
                                    icon="folder"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="Folder B"
                                >
                                  Folder B
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf is-child"
                            style="--Tree-depth: 2;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file b1"
                                >
                                  file b1
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf is-child"
                            style="--Tree-depth: 2;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file b2"
                                >
                                  file b2
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf"
                            style="--Tree-depth: 0;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file C"
                                >
                                  file C
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                          <li
                            class="amis-Tree-item amis-Tree-item--isLeaf"
                            style="--Tree-depth: 0;"
                          >
                            <div
                              class="amis-Tree-itemLabel"
                            >
                              <span
                                class="amis-Tree-itemArrowPlaceholder"
                              />
                              <div
                                class="amis-Tree-itemLabel-item"
                              >
                                <i
                                  class="amis-Tree-itemIcon amis-Tree-leafIcon"
                                >
                                  <icon-mock
                                    classname="icon icon-file"
                                    icon="file"
                                  />
                                </i>
                                <span
                                  class="amis-Tree-itemText"
                                  title="file D"
                                >
                                  file D
                                </span>
                                <div
                                  class="amis-Tree-item-icons"
                                />
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
              <div
                class="amis-Panel-footerWrap"
              >
                <div
                  class="amis-Panel-btnToolbar amis-Panel-footer"
                >
                  <button
                    class="amis-Button amis-Button--primary amis-Button--size-default"
                    type="submit"
                  >
                    <span>
                      提交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
